add[hwameistor-ui]: add ui nginx configuration
