# server/controller/SettingController.go
@@ -3,6 +3,7 @@ package controller
 import (
 	"github.com/gin-gonic/gin"
 	"github.com/hwameistor/hwameistor-ui/server/manager"
+	"net/http"
 )
 
 type ISettingController interface {
@@ -24,50 +25,43 @@ func NewSettingController(m *manager.ServerManager) ISettingController {
 // @Summary 摘要 高可用设置
 // @Description post EnableDRBDSetting
 // @Tags        Setting
-// @Param       Enabledrbd query string true "enabledrbd"
+// @Param       enabledrbd path string true "enabledrbd"
 // @Accept      json
 // @Produce     json
 // @Success     200 {object}  api.DrbdEnableSetting
-// @Router      /Settings/highavailabilitysetting/:enabledrbd [post]
+// @Router      /settings/highavailabilitysetting/{enabledrbd} [post]
 func (n *SettingController) EnableDRBDSetting(ctx *gin.Context) {
 	// 获取path中的name
-	//SettingName := ctx.Params.ByName("name")
-	//
-	//if SettingName == "" {
-	//	ctx.JSON(http.StatusNonAuthoritativeInfo, nil)
-	//	return
-	//}
-	//lsn, err := n.m.LocalStorageSettingController().GetLocalStorageSetting(pkgclient.ObjectKey{Name: SettingName})
-	//if err != nil {
-	//	ctx.JSON(http.StatusNotFound, nil)
-	//}
-	//
-	//Setting := api.ToSettingResource(*lsn)
-	//ctx.JSON(http.StatusOK, Setting)
+	enabledrbd := ctx.Param("enabledrbd")
+
+	if enabledrbd == "" {
+		ctx.JSON(http.StatusNonAuthoritativeInfo, nil)
+		return
+	}
+
+	setting, err := n.m.SettingController().EnableHighAvailability()
+	if err != nil {
+		ctx.JSON(http.StatusNotFound, nil)
+	}
+
+	ctx.JSON(http.StatusOK, setting)
 }
 
 // DRBDSettingGet godoc
 // @Summary 摘要 获取高可用设置
 // @Description get DRBDSettingGet
 // @Tags        Setting
-// @Param       Enabledrbd path string false "enabledrbd"
+// @Param       enabledrbd path string false "enabledrbd"
 // @Accept      json
 // @Produce     json
 // @Success     200 {object}  api.DrbdEnableSetting
-// @Router      /Settings/highavailabilitysetting [get]
+// @Router      /settings/highavailabilitysetting [get]
 func (n *SettingController) DRBDSettingGet(ctx *gin.Context) {
-	// 获取path中的name
-	//SettingName := ctx.Params.ByName("name")
-	//
-	//if SettingName == "" {
-	//	ctx.JSON(http.StatusNonAuthoritativeInfo, nil)
-	//	return
-	//}
-	//lsn, err := n.m.LocalStorageSettingController().GetLocalStorageSetting(pkgclient.ObjectKey{Name: SettingName})
-	//if err != nil {
-	//	ctx.JSON(http.StatusNotFound, nil)
-	//}
-	//
-	//Setting := api.ToSettingResource(*lsn)
-	//ctx.JSON(http.StatusOK, Setting)
+
+	setting, err := n.m.SettingController().GetDRBDSetting()
+	if err != nil {
+		ctx.JSON(http.StatusNotFound, nil)
+	}
+
+	ctx.JSON(http.StatusOK, setting)
 }
